<resources>
    <string name="app_name">App Productos</string>
    <string name="amount">Amount: </string>
    <string name="price">Price: $</string>
    <string name="product_title">Product name</string>
    <string name="hint_product">Product</string>
    <string name="btn">Save</string>
    <string name="title_edit">Update</string>
    <string name="title_add">Add</string>
    <string name="toast_empty">Empty fields</string>
</resources>