<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <!-- views hijos -->
    <TextView
        android:id="@+id/tvProductoTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/edNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/hint_product"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/edCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="1"
            android:inputType="number"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tvPrecioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="VisualLintBounds" />

        <EditText
            android:id="@+id/edPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="10.0"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </FrameLayout>
</LinearLayout>